# toolshub

./: .env  Cargo.toml  Cargo_migrations.toml  README.md  db.sqlite  diesel.toml  openssl_Fixed.txt  otp.py  software-tools-marketplace.html  tools-catalog.html  tools.html
migration/src/: lib.rs  m20250107_064302_create_tools.rs
migrations/2024-12-12-044655_create_tools_table/: down.sql  up.sql
src/: database_connection.rs  main.rs  routes.rs  schema.rs
src/about/: views.rs
src/admin/: dashboard.rs  form.rs  form_fields.rs  login.rs  menus.rs  menus_list.rs  mod.rs  page_not_found.rs  routes_names.rs  store.rs  views.rs
src/entities/: mod.rs  post.rs  prelude.rs  tools.rs
src/mainapp/: mod.rs  views.rs
src/models/: tools.rs
src/tools/: mod.rs  views.rs
static/: style.css
templates/: index.html  master.html  tool.html
templates/admin/: form.html  index.html  master.html  signin.html  table.html
