[package]
name = "toolshub"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.4.1", features = ["fs"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
askama = "0.12"

diesel = { version = "2.0", features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"


