[package]
name = "toolshub"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-http = { version = "0.4.1", features = ["fs"] }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
askama = "0.12.1"

diesel = { version = "2.2.0", features = ["postgres","r2d2"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
r2d2 = "0.8"

[general]
dirs = ["templates", "src/admin/templates"]
whitespace = "preserve"
